--- a/.github/workflows/safari.yml
+++ b/.github/workflows/safari.yml
@@ -18,5 +18,5 @@ jobs:
           git config user.email "hello@balance.io"
       - run: |
           git add -A
-          git commit -m "Safari Release Notes Update: ${date -u}" || exit 0
+          git commit -m "Safari Release Notes Update: $(date -u)" || exit 0
           git push
